# ai-memory-system

./: README.md  pyproject.toml  setup.py
ai_memory/: __init__.py  conversation_history.py  long_term_memory.py  memory_manager.py  models.py  preference_learner.py  vector_memory.py
tests/: test_memory_system.py
